Release preparation